--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -8,7 +8,9 @@
     background-color: $mainOrange;
   }
   &--large {
-    font-size: 1.5rem;
     padding: 1.1rem 1.9rem;
+    @mixin atSmall {
+      font-size: 1.5rem;
+    }
   }
 }
