--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -15,6 +15,12 @@
       align-items: center;
       align-content: center;
     }
+    &__medium-6 {
+      padding: 0 4rem;
+      flex: 2;
+      align-items: content;
+      justify-content: space-between;
+    }
     &__medium-8 {
       margin: 0;
       padding: 0 3rem;
