--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,30 +1,124 @@
 .row {
-  padding-top: 2rem;
-  display: flex;
-  flex-direction: column;
+
+  @mixin clearfix;
+
+  &--t-padding {
+    padding-top: 80px;
+  }
+
+  &--gutters {
+    margin-right: -65px;
+  }
+
+  &--gutters-large {
+    margin-right: -100px;
+  }
+
+  &--gutters-small {
+    margin-right: -45px;
+  }
+
+  &--gutters > div {
+    padding-right: 65px;
+  }
+
+  &--gutters-large > div {
+    padding-right: 100px;
+  }
+
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
+
   &__b-margin-until-medium {
     margin-bottom: 1rem;
   }
+
   @mixin atMedium {
-    flex-direction: row;
+
     &__b-margin-until-medium {
       margin-bottom: 0;
     }
+
     &__medium-4 {
-      flex: 2;
-      align-items: center;
-      align-content: center;
+      float: left;
+      width: 33.33%;
     }
+
+    &__medium-4--larger {
+      width: 37%;
+    }
+
     &__medium-6 {
-      padding: 0 4rem;
-      flex: 2;
-      align-items: content;
-      justify-content: space-between;
+      float: left;
+      width: 50%;
     }
+
     &__medium-8 {
-      margin: 0;
-      padding: 0 3rem;
-      flex: 3;
+      float: left;
+      width: 66.66%;
     }
+
+    &__medium-8--smaller {
+      width: 63%;
+    }
+
   }
+
+  @mixin atLarge {
+
+    &__b-margin-until-large {
+      margin-bottom: 0;
+    }
+
+    &__large-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__large-4--larger {
+      width: 37%;
+    }
+
+    &__large-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__large-8 {
+      float: left;
+      width: 66.66%;
+    }
+
+    &__large-8--smaller {
+      width: 63%;
+    }
+
+  }
+  
+  /* Begin Equal Height Rules */
+  &--equal-height-at-medium {
+    @mixin atMedium {
+      display: flex;
+    }
+
+    & > div {
+      float: none;
+      display: flex;
+    }
+
+  }
+
+  &--equal-height-at-large {
+    @mixin atLarge {
+      display: flex;
+    }
+
+    & > div {
+      float: none;
+      display: flex;
+    }
+
+  }
+
 }
