--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -4,6 +4,12 @@
   padding: .5rem 0;
   text-align: center;
 
+  a {
+    @mixin atMedium {
+      margin-top: 1.5rem;
+    }
+  }
+
   &__text {
     display: block;
     margin-bottom: 1rem;
