--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,12 +11,16 @@
 
   @mixin atMedium {
     background-color: rgba($mainBlue, .30);
+    position: fixed;
+
+    &--dark {
+      background-color: rgba(23, 51, 72, .85);
+    }
   }
 
   &__btn-container {
     @mixin atMedium {
-      float: right;
-
+      float: right; 
     }
   }
 
@@ -27,10 +31,16 @@
     transform: translateX(-50%) scale(.8);
     padding: 25px 36px;
     top: 0;
+    transition: transform .5s ease-out;
 
     @mixin atMedium {
-      left: auto;
-      transform: translateX(0);
+      left: 15%;
+      transform: translateX(0%);
+
+      .site-header--dark & {
+        transform: scale(.57);
+        top: -27px;
+      }
     }
   }
 
