--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,5 +1,5 @@
 .testimonial {
-  background-color: rgba($mainBlue, .25);
+  background-color: white;
   padding: 0 18px 1px 18px;
   margin-bottom: 98px;
 
